systems/microservices-demo/addons/kube-prometheus/httproute-grafana.yaml
# HTTPRoute — exposes Grafana through the shared ALB Gateway
# Hostname: grafana.ibtisam.qzz.io
# Backend:  kube-prometheus-stack-grafana Service (port 80)
#           Created by the kube-prometheus-stack Helm chart.
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  hostnames:
    - "grafana.ibtisam.qzz.io"
  parentRefs:
    - group: gateway.networking.k8s.io
      namespace: default
      kind: Gateway
      name: app-alb-gateway
      sectionName: http
    - group: gateway.networking.k8s.io
      namespace: default
      kind: Gateway
      name: app-alb-gateway
      sectionName: https
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
